syntax = "proto3";

package notification;

option go_package = "notification-service/proto";

service NotificationService {
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc MarkAsRead(MarkAsReadRequest) returns (MarkAsReadResponse);
  rpc DeleteNotification(DeleteNotificationRequest) returns (DeleteNotificationResponse);
}

message Notification {
  string id = 1;
  string user_id = 2;
  string type = 3;
  string title = 4;
  string content = 5;
  bool is_read = 6;
  string created_at = 7;
}

message GetNotificationsRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
  int32 total = 2;
}

message MarkAsReadRequest {
  string notification_id = 1;
  string user_id = 2;
}

message MarkAsReadResponse {
  bool success = 1;
  string message = 2;
}

message DeleteNotificationRequest {
  string notification_id = 1;
  string user_id = 2;
}

message DeleteNotificationResponse {
  bool success = 1;
  string message = 2;
}